ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: hello-python-service
                port:
                  number: 80
